# bandits

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
bandits/environment/cascade/: context_free.py  contextual.py  shared_utils.py
bandits/plotting/: __init__.py
bandits/policy/: context_free.py
examples/cascade/: context_free.ipynb  contextual.ipynb
